--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/cli": "^4.1.8",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
+    "postcss-url": "^10.1.3",
     "tailwindcss": "^4.1.8"
   },
   "dependencies": {
